@@ -9,10 +9,6 @@
 #include <Eris/Connection.h>
 #include <Eris/Exceptions.h>
 #include <Eris/Avatar.h>
-#include <Eris/TypeService.h>
-#include <Eris/TypeInfo.h>
-#include <Eris/TypeBoundRedispatch.h>
-#include <Eris/Response.h>
 
 #include <Atlas/Objects/Entity.h>
 #include <Atlas/Objects/Operation.h>
@@ -129,38 +125,6 @@ void View::disappear(const std::string& eid)
     }
 }
 
-void View::sightResponse(const RootOperation& op)
-{
-    if (op->instanceOf(ERROR_NO)) {
-        warning() << "got error response to View LOOK";
-        return;
-    } else if (!op->instanceOf(SIGHT_NO) || op->getArgs().empty()) {
-        warning() << "got malformed LOOK response, not a SIGHT";
-        return;
-    }
-    
-    GameEntity gent = smart_dynamic_cast<GameEntity>(op->getArgs().front());
-    if (!gent.isValid()) {
-        warning() << "got malformed SIGHT, arg is not an entity";
-        return;
-    }
-    
-    TypeInfo* type = getConnection()->getTypeService()->getTypeForAtlas(gent);
-    if (!type->isBound()) {
-        TypeInfoSet unbound;
-        unbound.insert(type);
-        
-        // we have to re-await this now, hmm
-        getConnection()->getResponder()->await(op->getRefno(), 
-                                        this, &View::sightResponse);
-                                        
-        new TypeBoundRedispatch(getConnection(), op, unbound);
-        return;
-    }
-    
-    sight(gent);
-}
-
 void View::sight(const GameEntity& gent)
 {
     bool visible = true;
@@ -273,11 +237,8 @@ void View::getEntityFromServer(const std::string& eid)
         look->setArgs1(what);
     }
     
-    look->setSerialno(getNewSerialno());
     look->setFrom(m_owner->getId());
     
-    getConnection()->getResponder()->await(look->getSerialno(), 
-                                        this, &View::sightResponse);
     getConnection()->send(look);
 }
 
